# budget-manager

./: README.md
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4348dfda7550_added_savings_tables.py  446f4bc515da_initial_migration.py  bae8f922ecc3_added_foriegn_keys.py  f68f8ce223b2_initial_migration.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: budgets.py  categories.py  expenses.py  login.py  savings_entry.py  savings_goal.py  users.py
backend/app/api/frontend/: frontend.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  base.py  budget.py  category.py  expense.py  savings_entry.py  savings_goal.py  user.py
backend/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/models/: README.md  __init__.py  budget.py  category.py  expense.py  savings_entry.py  savings_goal.py  user.py
backend/app/schemas/: __init__.py  budget.py  category.py  expense.py  savings_entry.py  savings_goal.py  user.py
budget-app-fe/: README.md  index.html  package-lock.json  package.json
budget-app-fe/src/: App.vue  main.js
budget-app-fe/src/components/: AppLink.vue  AppNavbar.vue
budget-app-fe/src/views/: AboutView.vue  HomeView.vue
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  index.css  index.js
frontend/src/components/: BudgetProgressBar.js  CreateExpenseModal.js  CreateExpensePopup.js  ExpensesTable.js  Navbar.js  ResponsiveAppBar.js
frontend/src/pages/: Budget.js  Category.js  Expenses.js  Home.js
frontend/src/utils/: api.js  dates.js  utils.js
